Fixed alignment

--- a/style.css
+++ b/style.css
@@ -458,8 +458,16 @@ hr {
         margin-right: 10px;
     }
 
+    .main-program-icon,
+    .main-program-heading,
+    .main-program-words {
+        justify-content: center;
+        align-self: center;
+    }
+
     .main-program-icon {
         width: 80px;
+        padding-top: 10px;
     }
 
     .main-program-whole {
